Fix little details

--- a/app/00_src/css/03_components/_banner.styl
+++ b/app/00_src/css/03_components/_banner.styl
@@ -4,7 +4,7 @@
     align-items center
     overflow hidden
     min-height 100vh
-    background url(/assets/images/illus/fond-header.jpg) no-repeat center center
+    background url(../images/illus/fond-header.jpg) no-repeat center center
     background-size cover
     text-align center
 
@@ -18,7 +18,7 @@
         left 0
         width 100%
         height 100%
-        background-image url(/assets/images/illus/objet-sous.png)
+        background-image url(../images/illus/objet-sous.png)
         background-repeat no-repeat
         background-position 50% 55%
         transition transform 50ms ease
@@ -29,7 +29,7 @@
         left 0
         width 100%
         height 100%
-        background-image url(/assets/images/illus/objet-sur.png)
+        background-image url(../images/illus/objet-sur.png)
         background-repeat no-repeat
         background-position 50% 55%
         transition transform 20ms ease
