--- a/app/00_src/css/04_layout/_header.styl
+++ b/app/00_src/css/04_layout/_header.styl
@@ -9,7 +9,7 @@
         top 2rem
         height 8rem
         width 20rem
-        background url(/assets/images/logo.png) no-repeat center center
+        background url(../images/logo.png) no-repeat center center
         background-size contain
 
     &__inner.container
