--- a/app/00_src/css/04_layout/_section.styl
+++ b/app/00_src/css/04_layout/_section.styl
@@ -19,7 +19,7 @@
         width 15rem
         height 0
         opacity 0
-        background url(/assets/images/icons/icone-projet.png) no-repeat center center
+        background url(../images/icons/icone-projet.png) no-repeat center center
         background-size contain
         transform-origin center
         transform translate(-50%, -50%)
@@ -87,21 +87,21 @@
 
 
         &:not(.banner)
-            background url(/assets/images/fond-noir.jpg) no-repeat center center
+            background url(../images/fond-noir.jpg) no-repeat center center
             background-size cover
 
     &--story
         .section__icon
-            background-image url(/assets/images/icons/icone-histoire.png)
+            background-image url(../images/icons/icone-histoire.png)
             transform translate(-50%, -60%)
 
     &--philosophy
         .section__icon
-            background-image url(/assets/images/icons/icone-philosophie.png)
+            background-image url(../images/icons/icone-philosophie.png)
 
     &--contact
         .section__icon
-            background-image url(/assets/images/icons/icone-contact.png)
+            background-image url(../images/icons/icone-contact.png)
 
     &s-open
         .section:nth-of-type(2n+1)
