--- a/app/00_src/css/03_components/_loader.styl
+++ b/app/00_src/css/03_components/_loader.styl
@@ -7,7 +7,7 @@
     padding 0
     height 0px
     opacity 0
-    background url(/assets/images/fond-noir.jpg) no-repeat center center
+    background url(../images/fond-noir.jpg) no-repeat center center
     background-size cover
     transition  opacity 500ms ease 500ms, height 0s ease 1s, padding 0s ease 1s
 
@@ -22,15 +22,18 @@
         left calc(50% - 4rem)
         width 8rem
         height 8rem
-        background url(/assets/images/logo.png) no-repeat 0% center
+        background url(../images/logo.png) no-repeat 0% center
         background-size cover
         animation loading 4s linear infinite
 
-.is-loading .loader
-    height 100vh
-    padding-top calc(50vh + 7rem)
-    opacity 1
-    transition opacity 500ms ease 500ms, height 0s ease 1s, padding 0s ease 1s
+.is-loading 
+    .banner, .header
+        display none
+    .loader
+        height 100vh
+        padding-top calc(50vh + 7rem)
+        opacity 1
+        transition opacity 500ms ease 500ms, height 0s ease 1s, padding 0s ease 1s
 
 @keyframes loading
     0%
