--- a/app/00_src/css/03_components/_team.styl
+++ b/app/00_src/css/03_components/_team.styl
@@ -62,7 +62,7 @@
             left 105vw
             width 100vw
             height 100vh
-            background url(/assets/images/fond-noir.jpg) no-repeat center center
+            background url(../images/fond-noir.jpg) no-repeat center center
             background-size cover
             transition left 200ms ease
 
