--- a/app/00_src/css/04_layout/_footer.styl
+++ b/app/00_src/css/04_layout/_footer.styl
@@ -3,7 +3,7 @@
         padding-bottom 3rem
 
     .section__icon
-        background-image url(/assets/images/icons/icone-navigation.png)
+        background-image url(../images/icons/icone-navigation.png)
 
     &__menu
         color $c-white
