Fix text color of member cards

--- a/app/00_src/css/03_components/_team.styl
+++ b/app/00_src/css/03_components/_team.styl
@@ -65,6 +65,7 @@
             background url(../images/fond-noir.jpg) no-repeat center center
             background-size cover
             transition left 200ms ease
+            color $c-white !important
 
             &-open
                 left 0
