--- a/app/00_src/css/03_components/_loader.styl
+++ b/app/00_src/css/03_components/_loader.styl
@@ -7,7 +7,7 @@
     padding 0
     height 0px
     opacity 0
-    background url(../images/fond-noir.jpg) no-repeat center center
+    background #151514 url(../images/fond-noir.jpg) no-repeat center center
     background-size cover
     transition  opacity 500ms ease 500ms, height 0s ease 1s, padding 0s ease 1s
 
@@ -26,7 +26,7 @@
         background-size cover
         animation loading 4s linear infinite
 
-.is-loading 
+.is-loading
     .banner, .header
         display none
     .loader
